2014-05-13  Emmanuel Vazquez  <emmanuel.vazquez@supelec.fr>

	Add a stk_length function

	* arrays/generic/stk_length.m: returns the length of an array
	* arrays/@stk_dataframe/stk_length.m: idem

2014-05-12  Julien Bect  <julien.bect@supelec.fr>

	stk_generate_samplepaths.m: Deal with duplicates in xt.

	* utils/stk_generate_samplepaths.m: Deal with duplicates in xt.

2014-05-08  Julien Bect  <julien.bect@supelec.fr>

	Move stk_model to core.

	* core/stk_model.m: formerly known as utils/stk_model.m
	* utils/stk_model.m: deleted

	Move utils/arrays one level up.

	* arrays: formerly known as utils/arrays
	* utils/arrays: deleted
	* config/stk_config_makeinfo.m: modified
	* config/stk_config_path.m: modified

2014-05-07  Julien Bect  <julien.bect@supelec.fr>

	@stk_dataframe/subsasgn: Solve a problem with Octave 3.2.x

	* utils/arrays/@stk_dataframe/subsasgn.m: solve a problem with
	Octave 3.2.x (0x0 stk_dataframe objects).

	Avoid changing the current dir to make a function available.

	* misc/test/stk_runtests.m: Avoid changing the current dir to make
	stk_config_path available. Use addpath/rmpath instead.

2014-05-06  Julien Bect  <julien.bect@supelec.fr>

	stk_config_path: Fix a private folder problem in Octave 3.2.x

	* config/stk_config_path.m: Fix a private folder problem in Octave
	3.2.x (a new private folder has been recently created).

	Use horzcat instead of [,].

	* lm/@stk_lm_affine/feval.m: modified
	* lm/@stk_lm_cubic/feval.m: modified
	* lm/@stk_lm_quadratic/feval.m: modified

	Change the way the MOLE is installed.

	* config/stk_config_mole.m: New function, that takes the place of
	misc/mole/init.m and misc/mole/install_mole_function.m.
	* misc/mole/init.m: removed
	* misc/mole/install_mole_function.m: removed
	* config/stk_config_addpath.m: Modified, to call stk_config_mole,
	thus avoiding the use of "run" which seems to be causing problems
	in Octave 3.2.x.
	* etc/octave-pkg/post_install.m: idem
	* stk_init.m: idem
